[gd_scene load_steps=4 format=3 uid="uid://char_select001"]

[ext_resource type="Script" path="res://scripts/ui/character_select_panel.gd" id="1"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.15, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.4, 0.5, 1)
tonemap_mode = 2
glow_enabled = true
glow_intensity = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.15, 0.15, 0.2, 1)
roughness = 0.9
metallic = 0.1

[node name="CharacterSelectPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 36
text = "SELECT YOUR SURVIVOR"
horizontal_alignment = 1

[node name="PreviewContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PreviewContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(400, 350)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="PreviewContainer/SubViewport"]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PreviewContainer/SubViewport"]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 2, 4, 2)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.2
shadow_enabled = true

[node name="FillLight" type="DirectionalLight3D" parent="PreviewContainer/SubViewport"]
transform = Transform3D(0.866, 0.433, -0.25, 0, 0.5, 0.866, 0.5, -0.75, 0.433, -2, 3, -2)
light_color = Color(0.7, 0.8, 1, 1)
light_energy = 0.5
shadow_enabled = false

[node name="CharacterHolder" type="Node3D" parent="PreviewContainer/SubViewport"]

[node name="Floor" type="MeshInstance3D" parent="PreviewContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0)
mesh = null
surface_material_override/0 = SubResource("StandardMaterial3D_floor")

[node name="Camera3D" type="Camera3D" parent="PreviewContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.9, 0.45, 0, -0.45, 0.9, 0, 1.5, 3)
current = true
fov = 45.0

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2

[node name="CharacterName" type="Label" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 28
text = "Character Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 14
text = "Character description goes here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 110.0
offset_right = -20.0
offset_bottom = 280.0
theme_override_constants/separation = 15

[node name="HealthLabel" type="Label" parent="InfoPanel/StatsContainer"]
layout_mode = 2
text = "HEALTH"

[node name="HealthBar" type="ProgressBar" parent="InfoPanel/StatsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 150.0
value = 100.0
show_percentage = false

[node name="SpeedLabel" type="Label" parent="InfoPanel/StatsContainer"]
layout_mode = 2
text = "SPEED"

[node name="SpeedBar" type="ProgressBar" parent="InfoPanel/StatsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 150.0
value = 100.0
show_percentage = false

[node name="DamageLabel" type="Label" parent="InfoPanel/StatsContainer"]
layout_mode = 2
text = "DAMAGE"

[node name="DamageBar" type="ProgressBar" parent="InfoPanel/StatsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 150.0
value = 100.0
show_percentage = false

[node name="SelectionContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 150

[node name="PrevButton" type="Button" parent="SelectionContainer"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "<"

[node name="NextButton" type="Button" parent="SelectionContainer"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = ">"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "CONTINUE"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "X"
